# pyCCMM

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: DEPLOYMENT.md
.github/workflows/: ci-cd.yml  test-pypi.yml
examples/: example_usage.py  example_use.py
src/pyccmm/: __init__.py  ccmm_handler.py  ccmm_metadata_handler.py  ccmm_models.py
src/pyccmm/schemas/: __init__.py
tests/: __init__.py  test_comprehensive.py  test_new_handler.py  test_validation.py  test_validation_new.py  test_xsd_validation.py
tools/: generate_html_tree.py  xsd_dataset_full.html
